--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -1,3 +1,8 @@
+@media only screen and (max-width: 600px) {
+    .rdrDefinedRangesWrapper{
+        display: none;
+    }
+  }
 @tailwind components;
 
 @layer components {
